Added cypress, pretterrc rules and nodemon to npm
Use 'npm run dev' to automatically restart server after each save.

--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Financial News Bot</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Financial News Bot</title>
-    <link rel="stylesheet" href="style.css" />
+    <body>
+        <header>
+            <div class="header-style">
+                <h1>Our Financial News Bot</h1>
+            </div>
+        </header>
 
-</head>
+        <main></main>
 
-<body>
+        <footer></footer>
 
-    <header>
-        <div class="header-style">
-            <h1>Our Financial News Bot</h1>
-        </div>
-    </header>
-
-    <main>
-    </main>
-
-    <footer>
-    </footer>
-
-    <script src="server.js" defer></script>
-</body>
-
+        <script src="server.js" defer></script>
+    </body>
 </html>
