Added fetch request to news api and tweaked index.html

--- a/public/index.html
+++ b/public/index.html
@@ -3,21 +3,20 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Financial News Bot</title>
+        <title>Financial Pulse</title>
         <link rel="stylesheet" href="style.css" />
     </head>
 
     <body>
         <header>
             <div class="header-style">
-                <h1>Our Financial News Bot</h1>
+                <h1>Financial Pulse</h1>
             </div>
         </header>
-
         <main></main>
 
         <footer></footer>
 
-        <script src="server.js" defer></script>
+        <script src="script.js" defer></script>
     </body>
 </html>
