Added JS that creates cards based off api response

--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,12 @@
                 <h1>Financial Pulse</h1>
             </div>
         </header>
-        <main></main>
+        <main>
+            <div class="cards-container"></div>
+        </main>
 
         <footer></footer>
 
-        <script src="script.js" defer></script>
+        <script src="script.js" async></script>
     </body>
 </html>
