--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,28 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Financial News Bot</title>
-        <link rel="stylesheet" href="style.css" />
-    </head>
 
-    <body>
-        <header>
-            <div class="header-style">
-                <h1>Our Financial News Bot</h1>
-            </div>
-        </header>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Financial News Bot</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
 
-        <main></main>
+<body>
+    <header>
+        <div class="header-style">
+            <h1>Our Financial News Bot</h1>
+        </div>
+    </header>
 
-        <footer></footer>
+    <main>
+        <div id="chat-container"></div>
+    </main>
 
-        <script src="server.js" defer></script>
-    </body>
+    <footer></footer>
+
+    <script type="module" src="script.js"></script>
+    <script src="server.js" defer></script>
+</body>
+
 </html>
