--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,7 @@
 
     <footer></footer>
 
-    <script type="module" src="script.js"></script>
-    <script src="server.js" defer></script>
+    <script src="bundle.js"></script>
 </body>
 
 </html>
