continued styling and altered api call to headlines from three days ago

--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,18 @@
     <body>
         <header>
             <div class="header__div">
-                <h1>Financial Pulse</h1>
+                <h1>Finance Pulse</h1>
             </div>
         </header>
         <main>
             <div class="cards-container"></div>
         </main>
 
-        <footer></footer>
+        <footer>
+            <div class="footer__div">
+                <p>© Fred Hartley & Fahan Ibrahim Hashi</p>
+            </div>
+        </footer>
 
         <script src="script.js" async></script>
     </body>
