Finalised conversion to react

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Financial Pulse</title>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="../src/index.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -12,33 +12,8 @@
             rel="stylesheet"
         />
     </head>
-
     <body>
-        <header>
-            <div class="header__div">
-                <img
-                    src="images/finance-pulse-logo.svg"
-                    alt="The Finance Pulse logo"
-                />
-                <h1>Finance Pulse</h1>
-            </div>
-        </header>
-        <main>
-            <div id="chat-container"></div>
-
-            <div class="cards-container"></div>
-        </main>
-
-        <footer>
-            <div class="footer__div">
-                <img
-                    src="images/finance-pulse-logo-footer.svg"
-                    alt="A light grey version of the Finance Pulse logo"
-                />
-                <p>© Fred Hartley & Fahan Ibrahim Hashi</p>
-            </div>
-        </footer>
-
-        <script src="bundle.js"></script>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="root"></div>
     </body>
 </html>
